--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Project specific
+
+./build
+./bin
+
 
 # Created by https://www.gitignore.io/api/c++,clion
 # Edit at https://www.gitignore.io/?templates=c++,clion
