--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -2,10 +2,8 @@
   // See https://go.microsoft.com//fwlink//?linkid=834763 for more information about this file.
   "configurations": [
     {
-      "name": "x64-Debug",
-      "generator": "Visual Studio 15 2017 Win64",
+      "name": "Debug",
       "configurationType": "Debug",
-      "inheritEnvironments": [ "msvc_x64" ],
       "buildRoot": "${projectDir}\\build\\Debug",
       "installRoot": "${projectDir}\\install\\Debug",
       "cmakeCommandArgs": "",
@@ -13,10 +11,8 @@
       "ctestCommandArgs": ""
     },
     {
-      "name": "x64-Release",
-      "generator": "Visual Studio 15 2017 Win64",
+      "name": "Release",
       "configurationType": "Release",
-      "inheritEnvironments": [ "msvc_x64" ],
       "buildRoot": "${projectDir}\\build\\Release",
       "installRoot": "${projectDir}\\install\\Release",
       "cmakeCommandArgs": "",
